Dev: code changes to add local APIs,userURI,currentOrganisation
